Completed entradas screen

--- a/Larco/Styles/Site.css
+++ b/Larco/Styles/Site.css
@@ -179,7 +179,7 @@ div.links
 .modal-form {padding:0!important;}
 .modal-form input { display:block; }
 .modal-form input.text, .modal-form textarea.text { margin-bottom:6px; width:95%; padding: 4px; resize: none;}
-.modal-form input.hasDatepicker {width:84%; display:inline;}
+.modal-form input.hasDatepicker {width:83%; display:inline;}
 .modal-form button.ui-datepicker-trigger {height:24px; margin-left: 0.2em;}
 .modal-form fieldset { padding:0; border:0; margin-top:10px; margin-left: 5px;}
 .modal-form select { display:block; margin-bottom:6px; width:98%; padding: .4em;}
@@ -225,6 +225,10 @@ div.links
 {
     width: 31px;
     vertical-align: top;
+}
+ 
+.ui-autocomplete {
+	z-index:10000!important;
 }
 
 .ui-autocomplete {
@@ -304,7 +308,7 @@ div.links
     width: 97.5%!important;
 }
 
-.modal-form tr.columns-4 input.hasDatepicker {width:81%;}
+.modal-form tr.columns-4 input.hasDatepicker {width:80%;}
 
 /* IE 6 doesn't support max-height
  * we use height instead, but this forces the menu to always be this tall
@@ -328,7 +332,7 @@ div.links
 #my-carousel ul.carousel li.carousel {
 	float:left; /* required */
 	width:1077px; /* required */
-	height:530px;
+	min-height:530px;
 	margin: 0px 10px 0 0;
 }
 
@@ -372,6 +376,27 @@ div.links
     border: 1px solid #bee1af;
 	color: #696969;
 }
+
+
+/*
+.ui-widget table.dataTable 
+{
+    font-size: 12px;
+    font-family: "Helvetica Neue", "Lucida Grande", "Segoe UI", Arial, Helvetica, Verdana, sans-serif;
+    color: #696969;
+}
+
+.ui-widget table.dataTable tr.odd
+{
+    background-color: #F2F8FC;
+    border: 1px;
+}
+
+.ui-widget table.dataTable tr.even
+{
+   background-color: white;
+    border: 1px;
+}*/
 
 #divBingMap 
 {
@@ -497,7 +522,6 @@ input.readonly
 .filter-form tr.columns-2 .ui-selectmenu-button { width:98%!important;}
 
 .ui-selectmenu-menu {z-index:10000!important;}
-.ui-autocomplete { z-index:10000!important;}
 
 ul.export-menu { 
     position: absolute; 
@@ -543,4 +567,10 @@ table.dataTable tbody tr.ui-state-active:hover {
 
 .ui-autocomplete-loading {
     background: white url("../Images/ui-anim_basic_16x16.gif") right center no-repeat!important;
+}
+
+div.nowrap-col {
+    white-space: nowrap; 
+    overflow:hidden; 
+    text-overflow : ellipsis;
 }
