completed stock screen and update inventarios to exclude inactive materials

--- a/Larco/Styles/Site.css
+++ b/Larco/Styles/Site.css
@@ -649,3 +649,7 @@ div.nowrap-col {
 .lowercase {
     text-transform:lowercase;
 }
+
+.ui-state-error, .ui-selectmenu-state-error {
+    border-color: #dc3545!important;
+}
