completed motivos catalog and TV screen page
also created dashboard for urgent orders.

--- a/Larco/Styles/app.css
+++ b/Larco/Styles/app.css
@@ -8,3 +8,11 @@
 tr.bold {
     font-weight: bold;
 }
+
+.dataTables_processing {
+    color:#004276!important;
+}
+
+.urgent {
+    color:#DC3545;
+}
